--- a/.gitignore
+++ b/.gitignore
@@ -75,8 +75,9 @@ lib/
 # Application bundle for Mac OS
 *.app/
 
-SheduledRepair.ico
 unit-tests/database.db
 unit-tests/test.ico
 unit-tests/test.fpcunit.ini
 unit-tests/test
+project/SheduledRepair
+project/SheduledRepair.ico
